--- a/web/resources/css/base.css
+++ b/web/resources/css/base.css
@@ -15,6 +15,8 @@ body{
     max-height: 100%;
 }
 
+.link-tools .tool-remove { display: none }
+
 *.unselectable {
     -moz-user-select: none;
     -khtml-user-select: none;
@@ -115,7 +117,9 @@ body{
 }
 
 .elementImg {
-    padding-right: 5px;
+    margin-right: 5px;
+    width: 30px;
+    height: 30px;
 }
 
 .mydropdown {
@@ -126,4 +130,28 @@ body{
 .spinner {
     width: 100%;
     max-width: 100%;
+}
+
+.custom-menu {
+    display: none;
+    z-index: 1000;
+    position: absolute;
+    overflow: hidden;
+    border: 1px solid #CCC;
+    white-space: nowrap;
+    font-family: sans-serif;
+    background: #FFF;
+    color: #333;
+    border-radius: 5px;
+    padding: 0;
+}
+
+.custom-menu li {
+    padding: 8px 12px;
+    cursor: pointer;
+    list-style-type: none;
+}
+
+.custom-menu li:hover {
+    background-color: #DEF;
 }
